Updated Thank You page, moved FAQ to its own directory

--- a/thankYou.html
+++ b/thankYou.html
@@ -34,7 +34,10 @@
                 	<a href="index.html" class="btn btn-orange btn-lg">Home</a>
                 </div>
                 <h1>Thank You!</h1>
-                <p>You have submitted your application for Democracy Summer 2015. We will be in touch soon!</p>
+                <h3 style="color: #fff; font-size: 32px;">You have submitted your application for Democracy Summer 2015. We'll be in touch soon!</h3>
+                
+                <p class="text-centered"><a style="color: #fff; font-style: italic;" href="http://www.democracysummer.com">Back to DemocracySummer.com</a></p>
+                <p class="text-centered"><a style="color: #fff; font-style: italic;" href="http://www.democracy-nc.org">Check out Democracy NC's website</a></p>
             </div>
         </div>
 
