Few final adjustments

--- a/faq/index.html
+++ b/faq/index.html
@@ -98,9 +98,9 @@
                     <p>Download an application below:</p>
                     
                     <ul>
-                    	<li><a href="#">Student Organizer Application</a></li>
-                        <li><a href="#">Communications Intern Application</a></li>
-                        <li><a href="#">Research Intern Application</a></li>
+                    	<li><a href="../download/DemSummerApplication2015.doc">Student Organizer Application</a></li>
+                        <li><a href="../download/CommsInternApplication2015.doc">Communications Intern Application</a></li>
+                        <li><a href="../download/ResearchInternApplication2015.doc">Research Intern Application</a></li>
                     </ul>
                     
                     <!--
