--- a/faq/index.html
+++ b/faq/index.html
@@ -87,7 +87,7 @@
                     <p>No, as stated previously, the Democracy Summer program is a full-time paid experience that requires 40+ hours a week (some work on weekends and evenings are to be expected). </p>
                     
                     <h3>I can't fill out the online application. Is there any other way to apply?</h3>
-                    <p>Yes! You can download the application below in MS Word format, and email it, along with your resume and cover letter, to <a href="mailto:omisade@democracy-nc.org" title="omisade@democracy-nc.org">omisade@democracy-nc.org</a>. You can also mail your application packet to our Durham office:</p>
+                    <p>Yes! You can download the application below in MS Word format, and email it, along with your resume and cover letter, to <a href="mailto:info@democracy-nc.org" title="info@democracy-nc.org">info@democracy-nc.org</a>. You can also mail your application packet to our Durham office:</p>
                     
                     <ul class="list-unstyled">
                         <li><strong>Democracy Summer Program</strong></li>
@@ -121,6 +121,18 @@
 <!-- jQuery Stuff -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="../js/scripts.js"></script>  
+
+<!-- GA Tracking -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-13035302-4', 'auto');
+  ga('send', 'pageview');
+
+</script>
 
     </body>
 
